--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Birthday code javascript</title>
+  <title>Happy Birthday</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:900'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<h1>Happy Birthday Vaishnavi 🥳 🎂🎉</h1>
-<footer> Wishes from Geervan,Anirudh,Sumant</footer>
+<h1>Happy Birthday </h1>
+
 <canvas id="birthday"></canvas>
 <!-- partial -->
   <script  src="./script.js"></script>
